@@ -1,17 +1,19 @@
 package nl.homeserver;
 
-import static java.time.temporal.ChronoUnit.DAYS;
-import static java.util.stream.Collectors.toList;
-
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.stream.Stream;
-
+import lombok.Data;
 import lombok.ToString;
 import org.apache.commons.lang3.Validate;
 
-import lombok.Data;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.Year;
+import java.time.YearMonth;
+import java.util.List;
+import java.util.stream.Stream;
+
+import static java.time.Month.JANUARY;
+import static java.time.temporal.ChronoUnit.DAYS;
+import static nl.homeserver.DatePeriod.aPeriodWithToDate;
 
 @Data
 @ToString
@@ -19,8 +21,25 @@ public class DateTimePeriod {
 
     private final LocalDateTime startDateTime;
 
+    @ToString.Exclude
     private final LocalDateTime endDateTime;
     private final LocalDateTime toDateTime;
+
+    public static DateTimePeriod of(final LocalDate day) {
+        return aPeriodWithToDateTime(day.atStartOfDay(), day.plusDays(1).atStartOfDay());
+    }
+
+    public static DateTimePeriod of(final YearMonth yearMonth) {
+        final LocalDateTime from = yearMonth.atDay(1).atStartOfDay();
+        final LocalDateTime to = from.plusMonths(1);
+        return aPeriodWithToDateTime(from, to);
+    }
+
+    public static DateTimePeriod of(final Year year) {
+        final LocalDateTime from = LocalDate.of(year.getValue(), JANUARY, 1).atStartOfDay();
+        final LocalDateTime to = from.plusYears(1);
+        return aPeriodWithToDateTime(from, to);
+    }
 
     private DateTimePeriod(final LocalDateTime startDateTime, final LocalDateTime toDateTime) {
         this.startDateTime = startDateTime;
@@ -48,6 +67,10 @@ public class DateTimePeriod {
         return startDateTime.isEqual(dateTime) || startDateTime.isAfter(dateTime);
     }
 
+    public DatePeriod toDatePeriod() {
+        return aPeriodWithToDate(startDateTime.toLocalDate(), toDateTime.toLocalDate());
+    }
+
     public List<LocalDate> getDays() {
         Validate.notNull(this.toDateTime, "DateTimePeriod must must be ending at some point of time");
 
@@ -56,6 +79,6 @@ public class DateTimePeriod {
 
         return Stream.iterate(from, date -> date.plusDays(1))
                      .limit(DAYS.between(from, to))
-                     .collect(toList());
+                     .toList();
     }
 }
