@@ -1,30 +1,25 @@
 package nl.homeserver.energie.meterstand;
 
-import static java.time.LocalDate.now;
-import static java.time.temporal.TemporalAdjusters.firstDayOfMonth;
-import static java.time.temporal.TemporalAdjusters.lastDayOfMonth;
-import static java.util.Comparator.reverseOrder;
-import static java.util.stream.Collectors.toList;
-import static java.util.stream.LongStream.rangeClosed;
-import static org.slf4j.LoggerFactory.getLogger;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import nl.homeserver.cache.DailyCacheWarmer;
+import nl.homeserver.cache.InitialCacheWarmer;
+import org.springframework.stereotype.Component;
 
 import java.time.Clock;
 import java.time.LocalDate;
 import java.time.Month;
 
-import org.slf4j.Logger;
-import org.springframework.stereotype.Component;
+import static java.time.LocalDate.now;
+import static java.time.temporal.TemporalAdjusters.firstDayOfMonth;
+import static java.time.temporal.TemporalAdjusters.lastDayOfMonth;
+import static java.util.Comparator.reverseOrder;
+import static java.util.stream.LongStream.rangeClosed;
 
-import lombok.AllArgsConstructor;
-import nl.homeserver.cache.DailyCacheWarmer;
-import nl.homeserver.cache.InitialCacheWarmer;
-
+@Slf4j
 @Component
-@AllArgsConstructor
+@RequiredArgsConstructor
 class MeterstandCacheWarmer implements InitialCacheWarmer, DailyCacheWarmer {
-
-    private static final Logger LOGGER = getLogger(MeterstandCacheWarmer.class);
-
     private static final Month[] MONTHS = Month.values();
 
     private final MeterstandController meterstandController;
@@ -34,9 +29,9 @@ class MeterstandCacheWarmer implements InitialCacheWarmer, DailyCacheWarmer {
     public void warmupInitialCache() {
         final LocalDate today = now(clock);
 
-        LOGGER.info("Warmup of cache meterstandenPerDag");
+        log.info("Warmup of cache meterstandenPerDag");
         rangeClosed(0, MONTHS.length).boxed()
-                                     .collect(toList())
+                                     .toList()
                                      .stream()
                                      .sorted(reverseOrder())
                                      .forEach(monthsToSubtract -> meterstandController.perDag(today.minusMonths(monthsToSubtract).with(firstDayOfMonth()),
@@ -48,7 +43,7 @@ class MeterstandCacheWarmer implements InitialCacheWarmer, DailyCacheWarmer {
         final LocalDate today = now(clock);
         final LocalDate yesterday = today.minusDays(1);
 
-        LOGGER.info("Warmup of cache meterstandenPerDag");
+        log.info("Warmup of cache meterstandenPerDag");
         meterstandController.perDag(yesterday.with(firstDayOfMonth()), yesterday.with(lastDayOfMonth()));
     }
 }
