@@ -1,9 +1,12 @@
 package nl.homeserver.energie.meterstand;
 
-import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
-import static org.apache.commons.lang3.builder.ToStringStyle.SHORT_PREFIX_STYLE;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import nl.homeserver.cache.CacheService;
+import nl.homeserver.energie.verbruikkosten.VerbruikKostenOverzichtService;
+import nl.homeserver.housekeeping.HousekeepingSchedule;
+import org.springframework.scheduling.annotation.Scheduled;
+import org.springframework.stereotype.Service;
 
 import java.time.Clock;
 import java.time.LocalDate;
@@ -11,22 +14,13 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 
-import org.apache.commons.lang3.builder.ReflectionToStringBuilder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.scheduling.annotation.Scheduled;
-import org.springframework.stereotype.Service;
+import static java.util.Comparator.comparing;
+import static java.util.stream.Collectors.groupingBy;
 
-import lombok.AllArgsConstructor;
-import nl.homeserver.cache.CacheService;
-import nl.homeserver.energie.verbruikkosten.VerbruikKostenOverzichtService;
-import nl.homeserver.housekeeping.HousekeepingSchedule;
-
+@Slf4j
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 class MeterstandHousekeeping {
-
-    private static final Logger LOGGER = LoggerFactory.getLogger(MeterstandHousekeeping.class);
 
     private static final int NR_OF_ROWS_TO_KEEP_PER_HOUR = 2;
     private static final int MAX_NR_OF_ROWS_PER_DAY = NR_OF_ROWS_TO_KEEP_PER_HOUR * 24;
@@ -39,10 +33,10 @@ class MeterstandHousekeeping {
 
     @Scheduled(cron = HousekeepingSchedule.METERSTAND_CLEANUP)
     public void start() {
-        LOGGER.info("Start housekeeping of Meterstand");
+        log.info("Start housekeeping of Meterstand");
         findDaysToCleanup().forEach(this::cleanup);
         clearCachesThatUsesPossibleDeletedMeterstanden();
-        LOGGER.info("Finished housekeeping of Meterstand");
+        log.info("Finished housekeeping of Meterstand");
     }
 
     private List<LocalDate> findDaysToCleanup() {
@@ -50,11 +44,11 @@ class MeterstandHousekeeping {
         return meterstandRepository.findDatesBeforeToDateWithMoreRowsThan(today.minusMonths(NUMBER_OF_MONTHS_TO_LOOK_BACK), today, MAX_NR_OF_ROWS_PER_DAY)
                                    .stream()
                                    .map(timestamp -> timestamp.toLocalDateTime().toLocalDate())
-                                   .collect(toList());
+                                   .toList();
     }
 
     private void cleanup(final LocalDate day) {
-        LOGGER.info("Cleanup day {}", day);
+        log.info("Cleanup day {}", day);
 
         final LocalDateTime start = day.atStartOfDay();
         final LocalDateTime end = start.plusDays(1).minusNanos(1);
@@ -73,7 +67,7 @@ class MeterstandHousekeeping {
     }
 
     private void cleanupMeterStandenInOneHour(final int hour, final List<Meterstand> meterstandenInOneHour) {
-        LOGGER.info("Cleanup hour {}", hour);
+        log.info("Cleanup hour {}", hour);
 
         if (meterstandenInOneHour.size() > NR_OF_ROWS_TO_KEEP_PER_HOUR) {
             meterstandenInOneHour.sort(comparing(Meterstand::getDateTime));
@@ -84,13 +78,13 @@ class MeterstandHousekeeping {
             final Meterstand lastMeterstandInHour = meterstandenInOneHour.get(meterstandenInOneHour.size() - 1);
             meterstandenInOneHour.remove(lastMeterstandInHour);
 
-            if (LOGGER.isDebugEnabled()) {
-                LOGGER.debug("Keep first in hour {}: {}", firstMeterstandInHour.getDateTime().getHour(), ReflectionToStringBuilder.toString(firstMeterstandInHour, SHORT_PREFIX_STYLE));
-                LOGGER.debug("Keep last in hour {}: {}", lastMeterstandInHour.getDateTime().getHour(), ReflectionToStringBuilder.toString(lastMeterstandInHour, SHORT_PREFIX_STYLE));
-                meterstandenInOneHour.forEach(meterstand -> LOGGER.debug("Delete: {}", ReflectionToStringBuilder.toString(meterstand, SHORT_PREFIX_STYLE)));
+            if (log.isDebugEnabled()) {
+                log.debug("Keep first in hour {}: {}", firstMeterstandInHour.getDateTime().getHour(), firstMeterstandInHour);
+                log.debug("Keep last in hour {}: {}", lastMeterstandInHour.getDateTime().getHour(), lastMeterstandInHour);
+                meterstandenInOneHour.forEach(meterstand -> log.debug("Delete: {}", meterstand));
             }
 
-            meterstandRepository.deleteInBatch(meterstandenInOneHour);
+            meterstandRepository.deleteAllInBatch(meterstandenInOneHour);
         }
     }
 }
