@@ -1,9 +1,11 @@
 package nl.homeserver.energie.opgenomenvermogen;
 
-import static java.util.Comparator.comparingInt;
-import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
-import static org.apache.commons.lang3.builder.ToStringStyle.SHORT_PREFIX_STYLE;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import nl.homeserver.cache.CacheService;
+import nl.homeserver.housekeeping.HousekeepingSchedule;
+import org.springframework.scheduling.annotation.Scheduled;
+import org.springframework.stereotype.Service;
 
 import java.time.Clock;
 import java.time.LocalDate;
@@ -11,21 +13,13 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 
-import org.apache.commons.lang3.builder.ReflectionToStringBuilder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.scheduling.annotation.Scheduled;
-import org.springframework.stereotype.Service;
+import static java.util.Comparator.comparingInt;
+import static java.util.stream.Collectors.groupingBy;
 
-import lombok.AllArgsConstructor;
-import nl.homeserver.cache.CacheService;
-import nl.homeserver.housekeeping.HousekeepingSchedule;
-
+@Slf4j
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class OpgenomenVermogenHousekeeping {
-
-    private static final Logger LOGGER = LoggerFactory.getLogger(OpgenomenVermogenHousekeeping.class);
 
     private static final int NR_OF_ROWS_TO_KEEP_PER_MINUTE = 1;
     private static final int NR_OF_ROWS_TO_KEEP_PER_HOUR = NR_OF_ROWS_TO_KEEP_PER_MINUTE * 60;
@@ -39,10 +33,10 @@ public class OpgenomenVermogenHousekeeping {
 
     @Scheduled(cron = HousekeepingSchedule.OPGENOMEN_VERMOGEN_CLEANUP)
     public void start() {
-        LOGGER.info("Start housekeeping of OpgenomenVermogen");
+        log.info("Start housekeeping of OpgenomenVermogen");
         findDaysToCleanup().forEach(this::cleanup);
         cacheService.clear(OpgenomenVermogenService.CACHE_NAME_OPGENOMEN_VERMOGEN_HISTORY);
-        LOGGER.info("Finished housekeeping of OpgenomenVermogen");
+        log.info("Finished housekeeping of OpgenomenVermogen");
     }
 
     private List<LocalDate> findDaysToCleanup() {
@@ -50,11 +44,11 @@ public class OpgenomenVermogenHousekeeping {
         return opgenomenVermogenRepository.findDatesBeforeToDateWithMoreRowsThan(today.minusMonths(NUMBER_OF_MONTHS_TO_LOOK_BACK), today, MAX_NR_OF_ROWS_PER_DAY)
                 .stream()
                 .map(timestamp -> timestamp.toLocalDateTime().toLocalDate())
-                .collect(toList());
+                .toList();
     }
 
     private void cleanup(final LocalDate day) {
-        LOGGER.info("Cleanup day {}", day);
+        log.info("Cleanup day {}", day);
 
         final List<OpgenomenVermogen> opgenomenVermogensOnDay = opgenomenVermogenRepository.getOpgenomenVermogen(day.atStartOfDay(), day.plusDays(1).atStartOfDay());
 
@@ -65,7 +59,7 @@ public class OpgenomenVermogenHousekeeping {
     }
 
     private void cleanupHour(final int hour, final List<OpgenomenVermogen> opgenomenVermogensInOneHour) {
-        LOGGER.debug("Cleanup hour {}", hour);
+        log.debug("Cleanup hour {}", hour);
 
         final Map<Integer, List<OpgenomenVermogen>> opgenomenVermogensByMinute = opgenomenVermogensInOneHour.stream()
                                                                                                             .collect(groupingBy(opgenomenVermogen -> opgenomenVermogen.getDatumtijd().getMinute()));
@@ -73,11 +67,11 @@ public class OpgenomenVermogenHousekeeping {
         final List<OpgenomenVermogen> opgenomenVermogensToKeep = opgenomenVermogensByMinute.values()
                                                                                            .stream()
                                                                                            .map(this::getOpgenomenVermogenToKeepInMinute)
-                                                                                           .collect(toList());
+                                                                                           .toList();
 
         final List<OpgenomenVermogen> opgenomenVermogensToDelete = opgenomenVermogensInOneHour.stream()
                                                                                         .filter(opgenomenVermogen -> !opgenomenVermogensToKeep.contains(opgenomenVermogen))
-                                                                                        .collect(toList());
+                                                                                        .toList();
 
         log(opgenomenVermogensToDelete, opgenomenVermogensToKeep);
 
@@ -85,9 +79,9 @@ public class OpgenomenVermogenHousekeeping {
     }
 
     private void log(final List<OpgenomenVermogen> opgenomenVermogensToDelete, final List<OpgenomenVermogen> opgenomenVermogensToKeep) {
-        if (LOGGER.isDebugEnabled()) {
-            opgenomenVermogensToKeep.forEach(opgenomenVermogen -> LOGGER.debug("Keep: {}", ReflectionToStringBuilder.toString(opgenomenVermogen, SHORT_PREFIX_STYLE)));
-            opgenomenVermogensToDelete.forEach(opgenomenVermogen -> LOGGER.debug("Delete: {}", ReflectionToStringBuilder.toString(opgenomenVermogen, SHORT_PREFIX_STYLE)));
+        if (log.isDebugEnabled()) {
+            opgenomenVermogensToKeep.forEach(opgenomenVermogen -> log.debug("Keep: {}", opgenomenVermogen));
+            opgenomenVermogensToDelete.forEach(opgenomenVermogen -> log.debug("Delete: {}", opgenomenVermogen));
         }
     }
 
